# miniRT

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  camera.c  camera.h  color.h  coordinate.h  info.c  light.c  light.h  main.c  miniRT.h  plane.h  point.c  print.c  sphere.h  sphere_coordinate.c  utils.h  vector.c
MLX42/: Makefile_Unix.mk
MLX42/docs/: index.md
MLX42/include/MLX42/: MLX42.h  libft.code-workspace
MLX42/include/glad/: glad.h
MLX42/include/lodepng/: lodepng.h
MLX42/src/: mlx_exit.c
include/: camera.h  coordinate.h  miniRT.h  parser.h  ray_tracing.h  scene.h
libft/: Makefile  get_next_line.h  libft.h
libft/src/: ft_arrfree.c  ft_arrlen.c  ft_atod.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_count_words.c  ft_get_next_line.c  ft_get_next_line_utils.c  ft_isalnum.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memmove.c  ft_putendl_fd.c  ft_recursive_power.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
rt_files/: error1.rt  error2.rt  error3.rt  error_normal_vec_range.rt  error_rgb_range.rt  multiple_objects.rt  simple_file.rt
src/: color.c  main.c  plane.c  point.c  print.c  ray_tracing.c  scene.c  sphere.c  sphere_coordinate.c  utils.c  vector.c
src/parser/: elements_parser.c  error_handling.c  open_file.c  parser.c  parser_utilities.c
